--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
       </div>
       <div class="navitems">
         <ul>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
-          <li><a href="#">服装城</a></li>
+          <li><a href="list.html">服装城</a></li>
+          <li><a href="#">美妆馆</a></li>
+          <li><a href="#">超值超市</a></li>
+          <li><a href="#">全球购</a></li>
+          <li><a href="#">闪购</a></li>
+          <li><a href="#">团购</a></li>
+          <li><a href="#">拍卖</a></li>
+          <li><a href="#">有趣</a></li>
         </ul>
       </div>
     </div>
@@ -196,7 +196,7 @@
   <!-- 推荐模块 -->
   <div class="w recom">
     <div class="recom_hd">
-      <img src="../images/recom.png" alt="">
+      <img src=" ../images/recom.png" alt="">
     </div>
     <div class="recom-bd">
       <ul>
